# rhuidean-studio

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md
.github/workflows/: deploy.yml  publish.yml
core/: Cargo.toml
core/src/: lib.rs  scale.rs  simulation.rs  tuning.rs
src/: lib.rs  renderer.rs  scale.rs  simulation.rs  tuning.rs
tui/: Cargo.toml
tui/src/: app.rs  audio.rs  main.rs  renderer.rs  ui.rs
web/: Cargo.toml
web/src/: audio.rs  lib.rs  renderer.rs
web/www/: index.html  main.js  style.css
www/: index.html  main.js  style.css
