[package]
name = "rhuidean-studio"
description = "A polyrhythmic orbital music visualizer."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["music", "visualizer", "polyrhythm", "tui", "audio"]
categories = ["multimedia::audio", "command-line-utilities", "visualization"]
readme = "../README.md"

[[bin]]
name = "rhuidean-studio"
path = "src/main.rs"

[dependencies]
rhuidean-studio-core = { path = "../core", version = "0.1.1" }
ratatui = "0.29"
crossterm = "0.28"
cpal = "0.15"
