[package]
name = "rhuidean-studio-web"
description = "Web frontend for Rhuidean Studio."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rhuidean-studio-core = { path = "../core", version = "0.2.1", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "BaseAudioContext",
    "BiquadFilterNode",
    "BiquadFilterType",
    "CanvasRenderingContext2d",
    "DelayNode",
    "DelayOptions",
    "Document",
    "GainNode",
    "GainOptions",
    "HtmlCanvasElement",
    "OscillatorNode",
    "OscillatorOptions",
    "OscillatorType",
    "Performance",
    "StereoPannerNode",
    "Window",
]
